--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-portal": "^4.2.2",
     "react-slick": "^0.29.0",
     "react-use": "^17.4.0",
     "slick-carousel": "^1.8.1",
@@ -25,6 +26,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-portal": "^4.0.6",
     "@types/react-slick": "^0.23.12",
     "autoprefixer": "^10.0.1",
     "daisyui": "^4.4.8",
