--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-portal": "^4.2.2",
     "react-slick": "^0.29.0",
     "react-use": "^17.4.0",
+    "sharp": "^0.33.0",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.0.0"
   },
