--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-loading-skeleton": "^3.3.1",
     "react-portal": "^4.2.2",
     "react-slick": "^0.29.0",
     "react-use": "^17.4.0",
