--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query-devtools": "^5.8.9",
     "axios": "^1.6.2",
     "html-react-parser": "^5.0.6",
+    "lodash": "^4.17.21",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
@@ -25,6 +26,7 @@
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
