--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@tanstack/react-query": "^5.8.9",
     "@tanstack/react-query-devtools": "^5.8.9",
     "axios": "^1.6.2",
-    "html-react-parser": "^5.0.6",
+    "html-react-parser": "^5.0.7",
     "lodash": "^4.17.21",
     "next": "14.0.3",
+    "nextjs-progressbar": "^0.0.16",
     "react": "^18",
     "react-dom": "^18",
     "react-loading-skeleton": "^3.3.1",
