--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "lodash": "^4.17.21",
     "next": "14.0.3",
     "nextjs-progressbar": "^0.0.16",
+    "query-string": "^8.1.0",
+    "rc-pagination": "^4.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.5.3",
     "react-loading-skeleton": "^3.3.1",
     "react-portal": "^4.2.2",
     "react-slick": "^0.29.0",
