--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "dependencies": {
     "@tanstack/react-query": "^5.8.9",
     "@tanstack/react-query-devtools": "^5.8.9",
+    "@vercel/speed-insights": "^1.0.0",
     "axios": "^1.6.2",
     "html-react-parser": "^5.0.7",
     "lodash": "^4.17.21",
     "next": "14.0.3",
     "nextjs-progressbar": "^0.0.16",
-    "query-string": "^8.1.0",
     "rc-pagination": "^4.0.1",
     "react": "^18",
     "react-dom": "^18",
