--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "html-react-parser": "^5.0.7",
     "lodash": "^4.17.21",
     "next": "14.0.3",
+    "next-seo": "^6.4.0",
     "nextjs-progressbar": "^0.0.16",
     "rc-pagination": "^4.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-intersection-observer": "^9.5.3",
     "react-loading-skeleton": "^3.3.1",
     "react-portal": "^4.2.2",
     "react-slick": "^0.29.0",
