--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "npm run sitemap",
+    "sitemap": "next-sitemap"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.8.9",
@@ -40,6 +42,7 @@
     "daisyui": "^4.4.8",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
+    "next-sitemap": "^4.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
