--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "next": "14.0.3",
     "next-seo": "^6.4.0",
     "nextjs-progressbar": "^0.0.16",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-normalize": "^10.0.1",
+    "postcss-preset-env": "^9.3.0",
     "rc-pagination": "^4.0.1",
     "react": "^18",
     "react-dom": "^18",
